// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<Fragment>
  <Memo(Toolbar)
    customSearchbarClasses=""
    customclasses=""
    data-qa="table-toolbar"
    onsearchclear={[MockFunction]}
    onsearchinput={[MockFunction]}
    searchplaceholderlabel="Search..."
  />
  <Memo(Pagination)
    count={4}
    customClasses="tableTopPagination"
    data-qa="table-pagination"
    labelPaginationOf="of"
    labelRowsPerPage="Rows per page"
    onChangePage={[MockFunction]}
    onChangeRowsPerPage={[MockFunction]}
    page={0}
    rowsPerPage={5}
    rowsPerPageOptions={
      Array [
        2,
        4,
        5,
        10,
      ]
    }
  />
  <WithStyles(ForwardRef(Table))
    className="table"
    data-qa="table"
  >
    <WithStyles(ForwardRef(TableHead))
      className=""
      data-qa="table-header"
    >
      <WithStyles(ForwardRef(TableRow))
        className=""
        data-qa="table-header-row"
      >
        <Memo(HeaderCell)
          customclasses=""
          data-qa="table-header-cell"
          header={
            Object {
              "label": "name",
            }
          }
          key="0"
          onRequestSort={[MockFunction]}
          order="asc"
          orderby="name"
          tooltiplabel="Sort"
          tooltipplacement="bottom-start"
        />
        <Memo(HeaderCell)
          customclasses=""
          data-qa="table-header-cell"
          header={
            Object {
              "label": "email",
            }
          }
          key="1"
          onRequestSort={[MockFunction]}
          order="asc"
          orderby="name"
          tooltiplabel="Sort"
          tooltipplacement="bottom-start"
        />
        <Memo(HeaderCell)
          customclasses=""
          data-qa="table-header-cell"
          header={
            Object {
              "label": "id",
              "numeric": true,
            }
          }
          key="2"
          onRequestSort={[MockFunction]}
          order="asc"
          orderby="name"
          tooltiplabel="Sort"
          tooltipplacement="bottom-start"
        />
        <Memo(HeaderCell)
          customclasses=""
          data-qa="table-header-cell"
          header={
            Object {
              "isActionButtonCell": true,
              "label": "action",
            }
          }
          isActionButtonCell={true}
          key="3"
          onRequestSort={[MockFunction]}
          order="asc"
          orderby="name"
          tooltiplabel="Sort"
          tooltipplacement="bottom-start"
        />
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableHead))>
    <WithStyles(ForwardRef(TableBody))
      className=""
      data-qa="table-body"
    >
      <WithStyles(ForwardRef(TableRow))
        data-qa="table-body-row"
        hover={true}
        key="4567893"
        tabIndex={-1}
      >
        <Memo(BodyCell)
          content="Robin Hood"
        />
        <Memo(BodyCell)
          content="robin.hood@winked.com"
        />
        <Memo(BodyCell)
          content={23456789}
        />
      </WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableRow))
        data-qa="table-body-row"
        hover={true}
        key="4567893"
        tabIndex={-1}
      >
        <Memo(BodyCell)
          content="Darth Vader"
        />
        <Memo(BodyCell)
          content="darth.vader@thedeathstart.com"
        />
        <Memo(BodyCell)
          content={9876}
        />
      </WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableRow))
        data-qa="table-body-row"
        hover={true}
        key="4567893"
        tabIndex={-1}
      >
        <Memo(BodyCell)
          content="Kaladin Stormblessed"
        />
        <Memo(BodyCell)
          content="kaladin.stormblessed@thearmy.com"
        />
        <Memo(BodyCell)
          content={567890}
        />
      </WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableRow))
        data-qa="table-body-row"
        hover={true}
        key="4567893"
        tabIndex={-1}
      >
        <Memo(BodyCell)
          content="Steve Jobs"
        />
        <Memo(BodyCell)
          content="steve.jobs@apple.com"
        />
        <Memo(BodyCell)
          content={1}
        />
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableBody))>
  </WithStyles(ForwardRef(Table))>
  <Memo(Pagination)
    count={4}
    customClasses=""
    data-qa="table-pagination"
    labelPaginationOf="of"
    labelRowsPerPage="Rows per page"
    onChangePage={[MockFunction]}
    onChangeRowsPerPage={[MockFunction]}
    page={0}
    rowsPerPage={5}
    rowsPerPageOptions={
      Array [
        2,
        4,
        5,
        10,
      ]
    }
  />
</Fragment>
`;

exports[`Snapshot Testing Required Props 1`] = `
<Fragment>
  <Memo(Toolbar)
    customSearchbarClasses=""
    customclasses=""
    data-qa="table-toolbar"
    onsearchclear={[MockFunction]}
    onsearchinput={[MockFunction]}
    searchplaceholderlabel="Search..."
  />
  <WithStyles(ForwardRef(Table))
    className="table"
    data-qa="table"
  >
    <WithStyles(ForwardRef(TableHead))
      className=""
      data-qa="table-header"
    >
      <WithStyles(ForwardRef(TableRow))
        className=""
        data-qa="table-header-row"
      >
        <Memo(HeaderCell)
          customclasses=""
          data-qa="table-header-cell"
          header={
            Object {
              "label": "name",
            }
          }
          key="0"
          onRequestSort={[MockFunction]}
          order="asc"
          orderby="name"
          tooltiplabel="Sort"
          tooltipplacement="bottom-start"
        />
        <Memo(HeaderCell)
          customclasses=""
          data-qa="table-header-cell"
          header={
            Object {
              "label": "email",
            }
          }
          key="1"
          onRequestSort={[MockFunction]}
          order="asc"
          orderby="name"
          tooltiplabel="Sort"
          tooltipplacement="bottom-start"
        />
        <Memo(HeaderCell)
          customclasses=""
          data-qa="table-header-cell"
          header={
            Object {
              "label": "id",
              "numeric": true,
            }
          }
          key="2"
          onRequestSort={[MockFunction]}
          order="asc"
          orderby="name"
          tooltiplabel="Sort"
          tooltipplacement="bottom-start"
        />
        <Memo(HeaderCell)
          customclasses=""
          data-qa="table-header-cell"
          header={
            Object {
              "isActionButtonCell": true,
              "label": "action",
            }
          }
          isActionButtonCell={true}
          key="3"
          onRequestSort={[MockFunction]}
          order="asc"
          orderby="name"
          tooltiplabel="Sort"
          tooltipplacement="bottom-start"
        />
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableHead))>
    <WithStyles(ForwardRef(TableBody))
      className=""
      data-qa="table-body"
    >
      <WithStyles(ForwardRef(TableRow))
        data-qa="table-body-row"
        hover={true}
        key="4567893"
        tabIndex={-1}
      >
        <Memo(BodyCell)
          content="Robin Hood"
        />
        <Memo(BodyCell)
          content="robin.hood@winked.com"
        />
        <Memo(BodyCell)
          content={23456789}
        />
      </WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableRow))
        data-qa="table-body-row"
        hover={true}
        key="4567893"
        tabIndex={-1}
      >
        <Memo(BodyCell)
          content="Darth Vader"
        />
        <Memo(BodyCell)
          content="darth.vader@thedeathstart.com"
        />
        <Memo(BodyCell)
          content={9876}
        />
      </WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableRow))
        data-qa="table-body-row"
        hover={true}
        key="4567893"
        tabIndex={-1}
      >
        <Memo(BodyCell)
          content="Kaladin Stormblessed"
        />
        <Memo(BodyCell)
          content="kaladin.stormblessed@thearmy.com"
        />
        <Memo(BodyCell)
          content={567890}
        />
      </WithStyles(ForwardRef(TableRow))>
      <WithStyles(ForwardRef(TableRow))
        data-qa="table-body-row"
        hover={true}
        key="4567893"
        tabIndex={-1}
      >
        <Memo(BodyCell)
          content="Steve Jobs"
        />
        <Memo(BodyCell)
          content="steve.jobs@apple.com"
        />
        <Memo(BodyCell)
          content={1}
        />
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableBody))>
  </WithStyles(ForwardRef(Table))>
</Fragment>
`;
